--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -1,6 +1,12 @@
 .cont {
     font-size: 30px;
-    background-color: lightblue;
-    margin-top: 15px;
+    background-color: whitesmoke;
     padding: 10px;
+}
+
+.itemList {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    margin-top: 5%;
+    justify-items: center;
 }
