--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -1,12 +1,19 @@
-.cont {
-    font-size: 30px;
-    background-color: whitesmoke;
-    padding: 10px;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    
 }
 
-.itemList {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    margin-top: 5%;
-    justify-items: center;
+.contenedorPadre {
+    font-size: 20px;
+    margin: 0 auto;
+    width: 100%;
+    padding: 40px;
+    background: #ADA996;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
+
+
+
