--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -2,8 +2,11 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background-color: gainsboro;
     border: 2px solid black;
+    background: #000000;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
 }
 
 .logo {
@@ -15,13 +18,23 @@
 .lista li{
     display: inline-block;
     list-style: none;
-    align-items: center;
     margin: 10px;
     margin-top: 30px;
+    font-size: 20px;
+}
+
+.lista a {
+    text-decoration: none;
+    color: white;
 }
 
 .carrito {
     display: flex;
     align-items: center;
-    margin-right: 15px;
+    margin-right: 50px;
+}
+
+.carrito a {
+    text-decoration: none;
+    color: white;
 }
